--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,6 +50,7 @@ jobs:
           name: Build front-end
           command: |
             cd frontend/
+            echo npm --version
             npm i
             npm run build
       - save_cache:
