--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,7 +50,7 @@ jobs:
           name: Build front-end
           command: |
             cd frontend/
-            npm i
+            npm i --force
             npm run build
       - save_cache:
           paths: [frontend/node_modules]
@@ -67,7 +67,7 @@ jobs:
           name: Back-end build
           command: |
             cd backend/
-            npm i
+            npm i --force
             npm run build
       - save_cache:
           paths: [backend/node_modules]
