--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,7 +50,7 @@ jobs:
           name: Build front-end
           command: |
             cd frontend/
-            npm i --force
+            npm i
             npm run build
       - save_cache:
           paths: [frontend/node_modules]
@@ -66,8 +66,8 @@ jobs:
       - run:
           name: Back-end build
           command: |
-            cd backend/
-            npm i --force
+            cd backend
+            npm i
             npm run build
       - save_cache:
           paths: [backend/node_modules]
