--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -255,6 +255,7 @@ jobs:
           name: Deploy frontend objects
           command: |
             cd frontend
+            echo "${API_URL}"
             npm run build
             aws s3 cp --recursive ./dist s3://udapeople-${CIRCLE_WORKFLOW_ID}/
       # Here's where you will add some code to rollback on failure 
