--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -80,6 +80,7 @@ jobs:
           name: Front-end test
           command: |
             cd frontend/
+            npm i
             npm run test
       - save_cache:
           paths: [frontend/node_modules]
@@ -112,7 +113,7 @@ jobs:
           name: Front-end Scan
           command: |
             cd frontend/
-            npm audit fix --audit-level=critical --force
+            npm audit fix --audit-level=critical 
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-build
@@ -131,7 +132,7 @@ jobs:
           name: Backend-end Scan
           command: |
             cd backend/
-            npm audit fix --audit-level=critical --force
+            npm audit fix --audit-level=critical
       - save_cache:
           paths: [backend/node_modules]
           key: backend-build
@@ -188,7 +189,7 @@ jobs:
       - checkout
       - add_ssh_keys:
           fingerprints:
-            - "6c:4a:11:89:73:60:c3:43:88:6b:e3:fc:e8:a7:b1:08"
+            - "13:c4:59:ed:5f:a7:14:17:5e:1c:9e:c7:af:fa:1b:4f"
       - run:
           name: Install dependencies
           command: |
