--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -356,7 +356,7 @@ jobs:
 
             aws cloudformation deploy \
               --template-file .circleci/files/cloudfront.yml \
-              --stack-name "CICD-cloudfront" \
+              --stack-name "udapeople" \
               --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID}"       
       # Here's where you will add some code to rollback on failure  
       - revert-migrations
